<menu xmlns:android="http://schemas.android.com/apk/res/android" 
	  xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_search"
	/>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_social_share"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_share"
	/>

    <item
        android:id="@+id/action_pause_control"
        android:icon="@drawable/ic_action_pause"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_pause_option"
	/>

</menu>
