<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/configure_method_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
	    		android:layout_alignParentStart="true"
                android:text="@string/configure_method_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/configure_method_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
	    		android:layout_alignParentStart="true"
                android:layout_below="@+id/configure_method_label" >

                <RadioButton
                    android:id="@+id/configure_method_dhcp_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/configure_method_dhcp_label" />

                <RadioButton
                    android:id="@+id/configure_method_manual_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configure_method_manual" />
            </RadioGroup>

            <TextView
                android:id="@+id/configure_ip_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
	    		android:layout_alignParentStart="true"
                android:layout_below="@+id/configure_method_radiogroup"
                android:text="@string/configure_ip_address_label" />

            <EditText
                android:id="@+id/configure_ip_address_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
	    		android:layout_alignParentStart="true"
                android:layout_below="@+id/configure_ip_address_label"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/configure_subnet_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
	    		android:layout_alignParentStart="true"
                android:layout_below="@+id/configure_ip_address_edit"
                android:text="@string/configure_subnet_label" />

            <EditText
                android:id="@+id/configure_subnet_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
	    		android:layout_alignParentStart="true"
                android:layout_below="@+id/configure_subnet_label"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/configure_gateway_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
	    		android:layout_alignParentStart="true"
                android:layout_below="@+id/configure_subnet_edit"
                android:layout_marginTop="28dp"
                android:text="@string/configure_gateway_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/configure_gateway_ip_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
	    		android:layout_alignParentStart="true"
                android:layout_below="@+id/configure_gateway_label"
                android:text="@string/configure_gateway_ip_label" />

            <EditText
                android:id="@+id/configure_gateway_ip_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
	    		android:layout_alignParentStart="true"
                android:layout_below="@+id/configure_gateway_ip_label"
                android:ems="10"
                android:inputType="text" />

            <Button
                android:id="@+id/configure_ready_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/configure_gateway_ip_edit"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="36dp"
                android:text="@string/configure_ready_button" />
        </RelativeLayout>
     
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways" />

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
